# convolution

./: .gitignore  LICENSE  README.md  pyproject.toml
src/convolution/: __init__.py  broadening.py  convolution.py  gauss.py  lorentz.py  tail.py
tests/: broadening_tests.py  convolution_tests.py  gauss_tests.py  lorentz_tests.py
