[project]
name = "convolution"
version = "0.1.0"
description = ""
authors = [
    {name = "ghotek",email = "shamiunov.km@phystech.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
