[project]
name = "convolution"
version = "0.1.0"
description = ""
authors = [
    {name = "ghotek",email = "shamiunov.km@phystech.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.4)",
    "numba (>=0.63.1,<0.64.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
