[project]
name = "convolution"
version = "0.1.0"
description = ""
authors = [
    {name = "ghotek",email = "shamiunov.km@phystech.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.4)",
    "numba (>=0.63.1,<0.64.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \__pycache__
  | \.pytest_cache
  | env
  | venv
  | buildenv
  | \.env
  | \.venv
  | \.buildenv
  | build
  | dist
  | logs
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "R0913",
    "R0902",
    "R0914",
    "R0917",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -s --tb=short"
